feat: update language

--- a/src/app/i18n/locales/en/global.json
+++ b/src/app/i18n/locales/en/global.json
@@ -130,6 +130,40 @@
         "srd_app_description" : "Are you an official representative of the project? If so, please sign up for our self-reporting dashboard to manage certain fields on your coin detail pages. Kindly follow the steps outlined here to complete the onboarding process.",
         "proof" : "Proof/Supporting evidence/documents",
         "submit" : "Submit"
+    },
+    "table" : {
+        "# Name" : "# Name",
+        "Name" : "Name",
+        "Price" : "Price",
+        "24H %" : "24H %",
+        "7D %" : "7D %",
+        "7D" : "7D",
+        "Volume 24H" : "Volume 24H",
+        "Market Cap" : "Market Cap",
+        "Market" : "Market",
+        "Volume (24H)" : "volume (24H)",
+        "volume (%)" : "Volume (%)",
+        "Circulating Supply" : "Circulating Supply",
+        "Last 7 Days" : "Last 7 Days",
+        "1H" : "1H",
+        "24H" : "24H",
+        "Blockchain" : "Blockchain",
+        "Added" : "Added",
+        "#" : "#",
+        "Volume" : "Volume",
+        "Trust Code": "Trust Code",
+        "Trade Volume 24h(Normalized)" : "Trade Volume 24h(Normalized)",
+        "Trade Volume 24h" : "Trade Volume 24h",
+        "Volume (7d)" : "Volume (7d)",
+        "Currency" : "Currency",
+        "Pair" : "Pair",
+        "Exchange" : "Exchange",
+        "Settlement" : "Settlement",
+        "24h Open Interest" : "24h Open Interest",
+        "24 Volume" : "24 Volume",
+        "Perpetuals" : "Perpetuals",
+        "Futures" : "Futures",
+        "Volume (7Days)" : "Volume (7Days)"
     }
 }
 
