--- a/src/app/i18n/locales/vi/global.json
+++ b/src/app/i18n/locales/vi/global.json
@@ -63,5 +63,39 @@
       "comfirm_password": "Xác nhận mật khẩu mới",
       "placeholder_comfirm_password": "Xác nhận mật khẩu mới",
       "btn": "Lưu thay đổi"
+    },
+    "table": {
+      "# Name": "# Tên",
+      "Name": "Tên",
+      "Price": "Giá",
+      "24H %": "24H %",
+      "7D %": "7D %",
+      "7D" : "7D",
+      "Volume 24H" : "Khối lượng 24 Giờ",
+      "Market Cap": "Vốn hóa thị trường",
+      "Market": "Chợ",
+      "Volume (24H)": "Khối lượng (24 Giờ)",
+      "Volume (%)": "Khối lượng (%)",
+      "Circulating Supply": "Lượng Cung Lưu Hành",
+      "Last 7 Days": "7 ngày qua",
+      "1H": "1H",
+      "24H": "24H",
+      "Blockchain": "Blockchain",
+      "Added": "Added",
+      "#": "#",
+      "Volume": "Khối lượng",
+      "Trust Code": "Trust Code",
+      "Trade Volume 24h(Normalized)": "Khối lượng giao dịch 24h(Chuẩn Hóa)",
+      "Trade Volume 24h": "Khối Lượng Trong 24 Giờ",
+      "Volume (7d)": "Khối Lượng (7 Ngày)",
+      "Currency": "Tiền tệ",
+      "Pair": "Cặp",
+      "Exchange": "Trao đổi",
+      "Settlement": "Quyết Toán",
+      "24h Open Interest": "Hợp Đồng Mở Trong 24 Giờ",
+      "24 Volume": "Khối Lượng Giao Dịch Trong 24 Giờ",
+      "Perpetuals": "Vĩnh Viễn",
+      "Futures": "Tương lai",
+      "Volume (7Days)": "Khối lượng (7 ngày)"
     }
 }
