update: add sidebar

--- a/src/app/i18n/locales/en/global.json
+++ b/src/app/i18n/locales/en/global.json
@@ -164,6 +164,9 @@
         "Perpetuals" : "Perpetuals",
         "Futures" : "Futures",
         "Volume (7Days)" : "Volume (7Days)"
-    }
+    },
+    "load_more" : "Load more",
+    "subscribe" : "Subscribe",
+    "newsfeed" : "NewsFeed"
 }
 
