--- a/src/app/i18n/locales/vi/global.json
+++ b/src/app/i18n/locales/vi/global.json
@@ -97,5 +97,8 @@
       "Perpetuals": "Vĩnh Viễn",
       "Futures": "Tương lai",
       "Volume (7Days)": "Khối lượng (7 ngày)"
-    }
+    },
+    "load_more" : "Tải thêm",
+    "subscribe" : "Đăng ký",
+    "newsfeed" : "Tin tức"
 }
