feat: update languague

--- a/src/app/i18n/locales/en/global.json
+++ b/src/app/i18n/locales/en/global.json
@@ -163,10 +163,54 @@
         "24 Volume" : "24 Volume",
         "Perpetuals" : "Perpetuals",
         "Futures" : "Futures",
-        "Volume (7Days)" : "Volume (7Days)"
+        "Volume (7Days)" : "Volume (7Days)",
+        "Update" : "Update"
     },
     "load_more" : "Load more",
+    "read_more" : "Read more",
+    "read_less" : "Read less",
     "subscribe" : "Subscribe",
-    "newsfeed" : "NewsFeed"
+    "newsfeed" : "NewsFeed",
+    "show_more" : "Show More",
+    "show_less" : "Show Less",
+    "share" : "Share",
+    "links" : "Links",
+    "contracts" : "Contracts",
+    "more" : "More",
+    "tags" : "Tags",
+    "overview" : "Overview",
+    "market" : "Market",
+    "socials" : "Socials",
+    "ratings" : "Ratings",
+    "analysis" : "Analysis",
+    "price" : "Price",
+    "trading_view" : "Trading view",
+    "chart" : "Chart",
+    "about" : "About",
+    "price_status" : "Price Status",
+    "price_today" : "Price Today",
+    "trading_volume" : "Trading Volume",
+    "price_change_24h" : "Price Change 24h",
+    "24h_low_24h_high" : "24h Low / 24h High",
+    "volume_market_cap" : "Volume / Market Cap",
+    "market_rank" : "Market Rank",
+    "market_cap" : "Market Cap",
+    "fully_diluted_market_cap" : "Fully Diluted Market Cap",
+    "price_yesterday" : "Price Yesterday",
+    "yesterday_low_high" : "Yesterday's Low / High",
+    "yesterday_change" : "Yesterday's Change",
+    "yesterday_volume" : "Yesterday's Volume",
+    "price_history" : "Price History",
+    "ath" : "All Time High",
+    "atl" : "All Time Low",
+    "roi" : "ROI",
+    "supply" : "Supply",
+    "circulating_supply" : "Circulating Supply",
+    "total_supply" : "Total Supply",
+    "max_supply" : "Max Supply",
+    "markets_exchanges" : "Markets / Exchanges",
+    "search" : "Search",
+    "rank" : "Rank",
+    "explorer" : "Explorer"
 }
 
