feat: update search exchange

--- a/src/app/i18n/locales/en/global.json
+++ b/src/app/i18n/locales/en/global.json
@@ -142,7 +142,7 @@
         "Market Cap" : "Market Cap",
         "Market" : "Market",
         "Volume (24H)" : "volume (24H)",
-        "volume (%)" : "Volume (%)",
+        "Volume (%)" : "Volume (%)",
         "Circulating Supply" : "Circulating Supply",
         "Last 7 Days" : "Last 7 Days",
         "1H" : "1H",
