update: call api, edit search func

--- a/src/app/i18n/locales/vi/global.json
+++ b/src/app/i18n/locales/vi/global.json
@@ -109,7 +109,7 @@
     "share": "Chia sẻ",
     "links": "Liên kết",
     "contracts": "Hợp đồng",
-    "more": "Hơn",
+    "more": "Xem thêm",
     "tags": "Thẻ",
     "overview": "Tổng quan",
     "market": "Chợ",
