--- a/src/app/i18n/locales/en/global.json
+++ b/src/app/i18n/locales/en/global.json
@@ -237,5 +237,6 @@
     "derivatives": "Derivatives Exchanges",
     "dex": "Dex Exchanges",
     "submit_coin": "Submit a request"
-  }
+  },
+  "knowledge": "Knowledge"
 }
