--- a/src/app/i18n/locales/vi/global.json
+++ b/src/app/i18n/locales/vi/global.json
@@ -169,5 +169,6 @@
     "spot": "Các sàn giao dịch tiền mã hóa giao ngay",
     "derivatives": "Các sàn giao dịch tiền mã hóa phát sinh",
     "dex": "Các sàn giao dịch tiền mã hóa phi tập trung"
-  }
+  },
+  "knowledge": "Kiến thức"
 }
